change text on Update person button

--- a/app/views/people/edit.html.slim
+++ b/app/views/people/edit.html.slim
@@ -11,6 +11,6 @@ h2 Edit person
     = f.label :occupation
     = f.text_area :occupation, class: 'form-control'
   p
-    = f.submit 'Create person', class: 'btn btn-default'
+    = f.submit 'Update person', class: 'btn btn-default'
 
 p = link_to 'Back', root_path
