--- a/app/views/people/index.html.slim
+++ b/app/views/people/index.html.slim
@@ -23,3 +23,4 @@ table.table
 
 p = link_to 'Add person', new_person_path, class: 'btn btn-primary'
 
+p = link_to 'Download people as zip', download_zip_people_path
