add link to Generate Exel Spreadsheet on index page

--- a/app/views/people/index.html.slim
+++ b/app/views/people/index.html.slim
@@ -24,3 +24,5 @@ table.table
 p = link_to 'Add person', new_person_path, class: 'btn btn-primary'
 
 p = link_to 'Download people as zip', download_zip_people_path
+
+p = link_to 'Generate Exel Spreadsheet', generate_exel_spreadsheet_people_path(format: :xlsx)
